<resources>
    <string name="app_name">PTVTimetable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <!-- Departure strings -->
    <string name="express">Express</string>
    <string name="platform">Platform %s</string>
    <string name="loading_departures">Loading departures…</string>
    <string name="no_departures">No upcoming departures</string>
    <string name="error_loading_departures">Error loading departures</string>
    <string name="retry">Retry</string>

    <!-- Widget strings -->
    <string name="widget_name">PTV Timetable</string>
    <string name="widget_description">Display upcoming departures for your route</string>
    <string name="widget_configure">Configure Widget</string>
    <string name="widget_route_type">Route Type</string>
    <string name="widget_route_name">Route Name</string>
    <string name="widget_from_stop">From Stop</string>
    <string name="widget_to_stop">To Stop</string>
    <string name="widget_save">Save</string>
    <string name="widget_cancel">Cancel</string>

    <!-- Route types -->
    <string name="route_type_train">Train</string>
    <string name="route_type_tram">Tram</string>
    <string name="route_type_bus">Bus</string>
    <string name="route_type_vline">V/Line</string>
    <string name="route_type_night_bus">Night Bus</string>
</resources>